--- a/src/Parser.Core/Parser.Core.csproj
+++ b/src/Parser.Core/Parser.Core.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Csv.cs" />
     <Compile Include="CsvParser.cs" />
     <Compile Include="CsvParserException.cs" />
